Fri Apr 21 12:47:57 1995  Mark Eichin  <eichin@cygnus.com>

	From Ian Taylor <ian@cygnus.com>.
	* telnetd.c (valid_opts): Add 'L'.  If KRB5, add -R and -t.
	(main): Handle -L.  If KRB5, handle -R and -t.
	* sys_term.c (login_program): New global variable.
	(start_login): Use login_program instead of LOGIN_PROGRAM.

Wed Mar 29 15:39:39 1995  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Add dependency on libtelnet.a

Tue Mar  7 19:59:30 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_INCLUDE.

Thu Mar  2 12:30:32 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:25:58 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE and ISODE_DEFS, replace check
		for -lsocket and -lnsl with WITH_NETLIB check.

Tue Feb 28 01:50:22 1995  John Gilmore  (gnu at toad.com)

	* sys_term.c:  Avoid <krb5/...> includes.

Wed Jan 11 15:23:07 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in (K4LIB): fix quoting so $(KRB4) actually survives
	to the Makefile.

Fri Nov 18 01:23:13 1994  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (install): install telnetd manpage
	(from Ted Lemon <mellon@ipd.wellsfargo.com>).

Fri Nov 18 00:44:05 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use WITH_KRB4, cache cc_t in termio check, cache
	SETPGRP_TWOARG check.
	* Makefile.in (K4LIB): use @K4LIB@.
	(telnetd): use $(K4LIB). (from epeisach)

Mon Nov  7 22:16:51 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: 
	  sys_term.c: Only include <sys/tty.h> if HAVE_SYS_TTY_H is
	  	  defined by configure.

        * configure.in: Check for sys/time.h and time.h.

	* defs.h: Pull in <sys/time.h> and <time.h> as necessary.

	* sys_term.c (startslave): Don't define time() manually.

	* configure.in: Add check for util library (needed for the Alpha)

Thu Sep 29 22:51:52 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executables if libraries change
